--- a/Sentiment Analyse mit TextDatei.ipynb
+++ b/Sentiment Analyse mit TextDatei.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "511ccacd",
    "metadata": {},
    "outputs": [],
@@ -18,17 +18,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "bac0fe4b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<spacytextblob.spacytextblob.SpacyTextBlob at 0x1c438534b20>"
+       "<spacytextblob.spacytextblob.SpacyTextBlob at 0x1ae75c2dcd0>"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -40,12 +40,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "id": "7fb2fe98",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = open(\"Shape of you - Ed Sheeran.txt\").read()\n",
+    "liste = pd.read_csv(\"liste.csv\")\n",
+    "df = open(\"Shape of you - Ed Sheeran1.csv\").read()\n",
     "df = df.replace(\"\\n\", \" \").strip()\n",
     "url_sent_score = []\n",
     "url_sent_label = []\n",
@@ -55,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "id": "4f3eba7f",
    "metadata": {},
    "outputs": [],
@@ -75,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "id": "e2d8bad3",
    "metadata": {},
    "outputs": [],
@@ -97,31 +98,91 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
+   "id": "cbbf48f1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"Address, The club isn't the best place to find a lover So the bar is where I go\""
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "id": "83afdbe1",
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "'str' object does not support item assignment",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Input \u001b[1;32mIn [7]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[0m df[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mSentiment Score\u001b[39m\u001b[38;5;124m\"\u001b[39m] \u001b[38;5;241m=\u001b[39m url_sent_score\n\u001b[0;32m      2\u001b[0m df[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mSentiment Label\u001b[39m\u001b[38;5;124m\"\u001b[39m] \u001b[38;5;241m=\u001b[39m url_sent_label\n\u001b[0;32m      3\u001b[0m df[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mPositive Words\u001b[39m\u001b[38;5;124m\"\u001b[39m] \u001b[38;5;241m=\u001b[39m total_pos\n",
-      "\u001b[1;31mTypeError\u001b[0m: 'str' object does not support item assignment"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Adresse</th>\n",
+       "      <th>Sentiment Score</th>\n",
+       "      <th>Sentiment Label</th>\n",
+       "      <th>Positive Words</th>\n",
+       "      <th>Negative Words</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>Positive</td>\n",
+       "      <td>best</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  Adresse  Sentiment Score Sentiment Label Positive Words Negative Words\n",
+       "0     NaN              1.0        Positive           best               "
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "df[\"Sentiment Score\"] = url_sent_score\n",
-    "df[\"Sentiment Label\"] = url_sent_label\n",
-    "df[\"Positive Words\"] = total_pos\n",
-    "df[\"Negative Words\"] = total_neg\n",
+    "liste[\"Sentiment Score\"] = url_sent_score\n",
+    "liste[\"Sentiment Label\"] = url_sent_label\n",
+    "liste[\"Positive Words\"] = total_pos\n",
+    "liste[\"Negative Words\"] = total_neg\n",
     "\n",
     "#optional export to CSV\n",
-    "df.to_csv(\"sentiment.csv\")\n",
-    "df"
+    "liste.to_csv(\"sentiment.csv\")\n",
+    "liste"
    ]
   },
   {
@@ -149,7 +210,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.8.13"
   }
  },
  "nbformat": 4,
